@@ -12,6 +12,7 @@ Bugs fixed:
 - 1725493 Fixed 401 send twice
 - 1746771 Fixed Memory leak in classProviderGz.c - in gatherNameSpaces()
 - 1748392 Fixed associations in interop namespace might not work
+- 1751084 Fixed sfcb does not support a hostname in an objectpath
 
 Changes in 1.2.3
 ================
