@@ -1,3 +1,8 @@
+2007-07-10  Sven Schuetz <sven@de.ibm.com>
+
+	* objectpath.c:
+	Fixed 1751084 sfcb does not support a hostname in an objectpath
+
 2007-07-09  Sven Schuetz <sven@de.ibm.com>
 
 	* default.reg, providerMgc.c:
